Improve ai grading