@@ -1,11 +1,13 @@
 package com.altester.ai_grading_service.AiModels;
 
+import com.altester.ai_grading_service.AiModels.dto.ChatApiResponse;
+import com.altester.ai_grading_service.exception.AiApiServiceException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import dev.langchain4j.data.message.UserMessage;
 import dev.langchain4j.model.chat.request.ChatRequest;
 import dev.langchain4j.model.chat.response.ChatResponse;
 import java.time.Duration;
-import java.util.Collections;
+import java.util.List;
 
 public abstract class BaseModel extends AbstractChatModel {
   protected final ObjectMapper objectMapper = new ObjectMapper();
@@ -21,16 +23,20 @@ public abstract class BaseModel extends AbstractChatModel {
    * @param prompt The prompt to send to the model
    * @return The model's response as a string
    */
-  public String generate(String prompt) {
+  public String generate(String prompt) throws AiApiServiceException {
     UserMessage userMessage = UserMessage.from(prompt);
 
-    ChatRequest request =
-        ChatRequest.builder().messages(Collections.singletonList(userMessage)).build();
+    ChatRequest request = ChatRequest.builder().messages(List.of(userMessage)).build();
 
     ChatResponse response = this.doChat(request);
 
-    if (response != null && response.aiMessage() != null) {
-      return response.aiMessage().text();
+    if (response instanceof ChatApiResponse chatApiResponse) {
+      if (chatApiResponse.getStatusCode().is2xxSuccessful())
+        return chatApiResponse.getMessage().text();
+
+      throw new AiApiServiceException(
+          "Error response received from AI API: " + chatApiResponse.getMessage().text(),
+          chatApiResponse.getStatusCode());
     }
 
     return "Error: No response generated";
